--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mayank Jain",
-  "name": "Design Portfolio of Mayank Jain",
+  "short_name": "NVJK Kartik",
+  "name": "Design Portfolio of NVJK Kartik",
   "icons": [
     {
       "src": "favicon.png",
