visual changes done

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Vinayak",
-  "name": "Design Portfolio of Vinayak",
+  "name": "Portfolio of Vinayak",
   "icons": [
     {
       "src": "icon-2566.png",
